# MazeWalker

./: CMakeLists.txt  Makefile  README.md  main.cpp  maze16x16.txt
image_to_maze/: README.md  code_for_alog_app.py  code_with_debug.py  config.json  image_to_maze.py  maze.txt  old_v_04_03_2025.py
image_to_maze/outputs/: maze.txt
src/: main.cpp
